open_telemetry/08_operator_and_collector/collector/deploy/networkPolicies/np-allow-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-collector-access-from-any
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: otel-collector
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 4317  # grpc port (has to be container port)
    - port: 4318  # http port (has to be container port)
